--- a/style.css
+++ b/style.css
@@ -33,93 +33,111 @@ div,ul,nav,header,footer,a,li,label,body{
     padding: 0;
 }
 
+html, body {
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden; /* oculta todo desborde horizontal */
+}
+
+img, video, canvas, svg {
+    max-width: 100%; /* nunca más anchas que su contenedor */
+    height: auto;
+    display: block;   /* evita espacios de inline-block */
+}
+
 
 /* ------------------------ MAIN SECTION ------------------------ */
 
 
-.proyecto-container {
-  display: flex;
-  flex-direction: column;
-  gap: 2rem;
-  padding: 2rem;
-  align-items: center;
-  container-type: inline-size;
-  container-name: proyecto-container;
-}
 
-
-
+ 
 .tarjeta {
-  width: 340px;
-  height: 370px;
-  background-size: cover;
-  background-position: center;
-  display: flex;
-  align-items: end;
-  padding: 1rem;
-  color: white;
+  position: relative;
+  width: calc(100% - 20px); /* restá los 10px de cada lado */
+  margin: 10px;
+  height: 350px;
+  overflow: hidden;
+  margin: 10px;
+  border-radius: 12px;
+  box-shadow: 10px 10px #e2eaff;
+}
+
+.tarjeta img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: opacity 0.3s ease-in-out;
+}
+
+
+
+/* Imagen por defecto visible */
+.tarjeta .img-default {
+    opacity: 1;
+}
+
+/* Imagen hover oculta inicialmente */
+.tarjeta .img-hover {
+    opacity: 0;
+}
+
+/* Al pasar el mouse, invertimos */
+.tarjeta:hover .img-default {
+    opacity: 0;
+}
+
+.tarjeta:hover .img-hover {
+    opacity: 1;
+}
+
+.proyectos-container a{
   text-decoration: none;
 }
 
-a{
-    text-decoration: none;
+.tarjeta__title{
+  position: absolute;
+  bottom: 0px;
+  left: 10px;
+  color: black;
+  font-size: 1.3rem;
+  padding: 4px 8px;
+  z-index: 2;     
 }
-
-/* .tarjeta {
-  width: 300px;
-  height: 200px;
-  background-size: cover;
-  background-position: center;
-  margin: 1rem;
-  transition: background-image 0.3s ease;
-  display: flex;
-  align-items: end;
-  padding: 1rem;
-  color: white;
-  text-decoration: none;
-} */
-
-.proyecto:hover {
-  transform: scale(1.02);
-}
-
-.proyecto img {
-  max-width: 100%;
-  height: auto;
-  border-radius: 4px;
-}
-
-.proyecto h3 {
-  margin-top: 1rem;
-  font-size: 1.2rem;
-  color: #333;
-  text-transform: uppercase;
-}
-
-
 
 
 /* ------------------------ END MAIN SECTION ------------------------ */
 
-/* @container proyecto-container (min-width:700px){
+@container proyecto-container (min-width:700px){
+    .proyecto-container{
+        display: flex;
+        flex-direction: column;
+        gap: 2rem;
+        padding: 2rem;
+        align-items: center;        
+    }
+
+    .tarjeta {
+        width: 300px;
+        height: 200px;
+        background-size: cover;
+        background-position: center;
+        margin: 1rem;
+        transition: background-image 0.3s ease;
+        display: flex;
+        align-items: end;
+        padding: 1rem;
+        color: white;
+        text-decoration: none;
+    }
     
-} */
+}
 
 
 
 
-
-/* ------------------------ FOOTER SECTION ------------------------ */
-
-/* footer{
-    padding: 10px;
-    text-align: center;
-    background-color: #222;
-    color: #fff ;
-    font-size: 14px;
-} */
-
-/* ------------------------ END FOOTER SECTION ------------------------ */
 
 
 
